data/derived/comb/progs/unify/prog4473.ml.out
Characters 8-14:
  wwhile (fptest, 0);;
          ^^^^^^
Error: This expression has type int -> int
       but an expression was expected of type int -> int * bool
       Type int is not compatible with type int * bool 
